--- a/src/index.html
+++ b/src/index.html
@@ -8,43 +8,84 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
+  <nav class="navbar navbar-defualt">
+    <div class="container">
+      <a class='nav navbar-brand'>blah blah</a>
+    </div>
+    <div class="navbar-menu">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </div>
+  </nav>
 
-  <!--
-    Previous project placeholder begins
-  -->
-  <div class="header">
-    <h1>Morgan McCircuit</h1>
-    <h2>I write code</h2>
+  <div id="portfolio-Carousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicator">
+      <li data-target="#portfolio-Carousel" data-slide-to="0" class="active"></li>
+      <li data-target="#portfolio-Carousel" data-slide-to="1"></li>
+      <li data-target="#portfolio-Carousel" data-slide-to="1"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="item active">
+        <div class="carousel-caption">
+          <h1>dfdfadasd</h1>
+          <p>asdasad</p>
+        </div>
+      </div>
+      
+      <div class="item">
+        <div class="carousel-caption">
+          <h1>fasfddafafs</h1>
+          <p>adasdsdsaa</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="carousel-caption">
+          <h1>addsadsdad</h1>
+          <p>asdasdads</p>
+        </div>
+      </div>
+    </div>
+
+    <a class="left carousel-control" href="#portfolio-Carousel" data-slide="prev">
+      <span class="assdadasassd"></span>
+      <span class-"adafasdadassa"></span>
+    </a>
+    <a class="right carousel-control" href="#portfolio-Carousel" data-slide="next">
+      <span class="adadasdasaadad"></span>
+      <span class="fafaasdsadsadsadd"></span>
+    </a>
   </div>
 
-  <div class="tagline">
-    <h3>Who I am</h3>
-    <p>Hi, my name is Morgan and I love to write code that is efficient.</p>
+  <div class="marketing">
+    <div class="container">
+      <div class= " row">
+        <div class="col-lg-4">
+          <span class="glyphicon glyphicon-plus"></span>
+          <h2>saddsadsa</h2>
+          <p>asfadff</p>
+        </div>
+        <div class="col-lg-4">
+          <span class="glyphicon glyphicon-repeat"></span>
+          <h2>adaasffasd</h2>
+          <p>asdassadassd</p>
+        </div>
+        <div class="col-lg-4">
+          <span class="glyphicon glyphicon-tag"></span>
+          <h2>adaasffasd</h2>
+          <p>asdassadassd</p>
+        </div>
+      </div>
+    </div>
   </div>
 
-
-  <div class="skills">
-    <h3>What I do</h3>
-    <p>Here are some of the languages I use on a day-to-day.</p>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-    </ul>
-  </div>
-
-  <div class="contact">
-    <h3>Get in touch</h3>
-    <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
-  </div>
-  <!--
-    Previous project placeholder ends
-    (unused pieces will be deleted at the last task)
-  -->
-
-
-  <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+  <footer>
+    <div class="container">
+      <h3>adfafsdfsaf</h3>
+      <p>adasdasds</p>
+    </div>
+  </footer>
 </body>
 </html>
